# checker-framework

./: .editorconfig  .gitignore  .travis-build.sh  .travis.yml  CONTRIBUTING.md  Makefile  README.md  azure-pipelines.yml  build.gradle  gradle-mvn-push.gradle  settings.gradle
.github/: ISSUE_TEMPLATE  dependabot.yml  renovate.json
.github/workflows/: ci.yml  dependency-download-and-submit.yml  dependency-generate-and-upload.yml  dependency-review.yml
checker/: build.gradle
checker-qual/: build.gradle
checker-qual-android/: build.gradle
checker-util/: build.gradle
checker/bin-devel/: Dockerfile-README  Dockerfile-ubuntu-jdk-latest  Dockerfile-ubuntu-jdk-latest-plus  Dockerfile-ubuntu-jdk-next  Dockerfile-ubuntu-jdk-next-plus  Dockerfile-ubuntu-jdk11  Dockerfile-ubuntu-jdk11-plus  Dockerfile-ubuntu-jdk17  Dockerfile-ubuntu-jdk17-plus  Dockerfile-ubuntu-jdk19  Dockerfile-ubuntu-jdk19-plus  Dockerfile-ubuntu-jdk20  Dockerfile-ubuntu-jdk20-plus  Dockerfile-ubuntu-jdk21  Dockerfile-ubuntu-jdk21-plus  Dockerfile-ubuntu-jdk23  Dockerfile-ubuntu-jdk23-plus  Dockerfile-ubuntu-jdk24  Dockerfile-ubuntu-jdk24-plus  Dockerfile-ubuntu-jdk8  Dockerfile-ubuntu-jdk8-plus  build.sh  check-jdk-consistency.sh  checkout-historical.sh  clone-related.sh  (+28 more)
dataflow/: build.gradle
docs/: CHANGELOG.md  build.gradle  checker-framework-quick-start.html  checker-framework-webpage.html
docs/examples/BazelExample/: BUILD  BazelExample.java  MODULE.bazel  Makefile  README.md  maven_install.json
framework/: build.gradle
framework-test/: build.gradle
javacutil/: build.gradle
(+1837 files in other folders)
