bazel_dep(name = "rules_jvm_external", version = "6.6")
maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")
maven.install(
    artifacts = [
        "io.github.eisop:checker-qual:3.42.0-eisop5",
        "io.github.eisop:checker:3.42.0-eisop5",
    ],
    lock_file = "//:maven_install.json",
)

use_repo(maven, "maven")
